@@ -12,12 +12,12 @@ RUN gradle --quiet -x test installDist
 #
 # RUNTIME
 #
-FROM docker.io/eclipse-temurin:17-jre-alpine
-ARG PROJECT=hexagon_jetty_postgresql
+FROM docker.io/eclipse-temurin:20-jre-alpine
+ARG PROJECT=hexagon_nima_pgclient
 
 ENV POSTGRESQL_DB_HOST tfb-database
-ENV JDK_JAVA_OPTIONS -XX:+AlwaysPreTouch -XX:+UseParallelGC -XX:+UseNUMA
+ENV JDK_JAVA_OPTIONS --enable-preview -XX:+AlwaysPreTouch -XX:+UseParallelGC -XX:+UseNUMA
 
 COPY --from=build /hexagon/$PROJECT/build/install/$PROJECT /opt/$PROJECT
 
-ENTRYPOINT [ "/opt/hexagon_jetty_postgresql/bin/hexagon_jetty_postgresql" ]
+ENTRYPOINT [ "/opt/hexagon_nima_pgclient/bin/hexagon_nima_pgclient" ]
